backend/overlays/stage/canary/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: backend
spec:
  template:
    spec:
      containers:
        - name: backend-pod
          image: vikasprince/fullstack-backend:v1.1.1  # Canary version of the image
          imagePullPolicy: IfNotPresent
